Fix landscape mode on ios

--- a/sudoku_app/sudokutime/static/css/style.css
+++ b/sudoku_app/sudokutime/static/css/style.css
@@ -17,7 +17,7 @@
 }
 
 body {
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    /* padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left); */
     background: var(--secondary);
     font-size: var(--grid-text);
 }
